Feature/create tasks functionality (#8)
* Adding tasks functionality and tests.
